<resources>
    <string name="app_name">Staff</string>
    <string name="hint_phone">375(XX)1231212</string>
    <string name="send_phone">Send Phone</string>
    <string name="virification_code">Verification Code</string>
    <string name="send_verify_code">Send Verififcation Code</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="navigation_item_title_user">User</string>
    <string name="navigation_item_title_route">Route</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="change_user">Change user</string>
    <string name="edit">Edit user</string>
    <string name="save">Save</string>
    <string name="station">Station</string>
    <string name="google_maps_key">AIzaSyDAuwQ3sIHi60xGu2x46t2sFW4UGlkFuNk</string>
    <string name="city">City</string>
    <string name="station_name">Station Name</string>
    <string name="new_station">Add new station</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="bus">Bus</string>
    <string name="busmodel">Bus model</string>
    <string name="busnumber">Bus number</string>
    <string name="addbus">Add Bus</string>
    <string name="price">Price</string>
    <string name="signup">Sign Up</string>
    <string name="add_staff">Add staff</string>
    <string name="book">My book</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="navigation_item_title_ticket">Ticket</string>
    <string name="make_reservation">Make reservation</string>
    <string name="toolbar_title_auth_phone">Phone</string>
    <string name="toolbar_title_auth_code">Verification Code</string>
    <string name="toolbar_title_auth_sign_up">Sign Up</string>
    <string name="toolbar_title_book_detail">Book details</string>
    <string name="toolbar_title_bus">Bus</string>
    <string name="toolbar_title_home">Home</string>
    <string name="toolbar_title_my_route">Book</string>
    <string name="toolbar_title_new_route">New Route</string>
    <string name="toolbar_title_route_detail">Route Details</string>
    <string name="toolbar_title_route">Route</string>
    <string name="toolbar_title_station">Station</string>
    <string name="toolbar_title_ticket_detail">Ticket Details</string>
    <string name="toolbar_title_ticket">Ticket</string>
    <string name="from">From</string>
    <string name="to">To</string>
</resources>
