<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_item_route_staff"
        android:icon="@drawable/ic_route_black_24dp"
        android:title="@string/navigation_item_title_route" />
    <item
        android:id="@+id/navigation_item_station"
        android:icon="@drawable/ic_add_location_black_24dp"
        android:title="@string/station" />

    <item
        android:id="@+id/navigation_item_book"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/book" />

    <item
        android:id="@+id/navigation_item_route_user"
        android:icon="@drawable/ic_ticket"
        android:title="@string/navigation_item_title_ticket"/>

    <item
        android:id="@+id/navigation_item_user"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/navigation_item_title_user" />
</menu>