<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/toolbar_title"
            style="@style/ToolbarTitle"
            android:text="@string/toolbar_title_bus" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_busmodel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
       android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bus_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/busmodel"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_bus_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_busmodel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bus_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/busnumber"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_bus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_bus_number"
        android:layout_margin="10dp"
        android:text="@string/addbus"
        style="@style/NormalButton"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bus_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/save_bus"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>