<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/toolbar_title"
            style="@style/ToolbarTitle"
            android:text="@string/toolbar_title_auth_phone" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_phone_numper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/send_phone"
        app:layout_constraintVertical_chainStyle="packed"
        app:counterEnabled="true"
        app:counterMaxLength="12">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/hint_phone"
            android:textAlignment="center"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/send_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/NormalButton"
        android:text="@string/send_phone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_input_phone_numper"
        app:layout_constraintStart_toStartOf="@+id/text_input_phone_numper"
        app:layout_constraintTop_toBottomOf="@+id/text_input_phone_numper"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>