<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView

            android:id="@+id/toolbar_title"
            style="@style/ToolbarTitle"
            android:text="@string/toolbar_title_new_route" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/container_from_to_date_time_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <EditText
            android:id="@+id/new_route_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/from"
            android:textAlignment="center"
            android:inputType="text"
            style="@style/MyEdtxt"/>

        <EditText
            android:id="@+id/new_route_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to"
            android:textAlignment="center"
            android:inputType="text"
            style="@style/MyEdtxt"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/new_route_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                tools:text="12.05.2019"
                android:textSize="20sp"
                android:drawableStart="@drawable/ic_today_white_24dp"
                android:drawablePadding="5dp"
                android:textColor="@color/white"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/new_route_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                tools:text="13:00"
                android:drawableStart="@drawable/ic_access_time_white_24dp"
                android:drawablePadding="5dp"
                android:textColor="@color/white"
                android:layout_weight="2"/>

            <EditText
                android:id="@+id/new_route_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/price"
                android:inputType="number"
                android:textAlignment="center"
                tools:text="5.5"
                android:layout_gravity="end"
                style="@style/MyEdtxt"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/new_route_recylerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_from_to_date_time_price"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_route_save_float"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_check_white_24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>